plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'checkstyle'
	id 'jacoco'
}

group = 'com.checkmate'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-liquibase'
	// Redis (optional - uncomment when Redis is available)
	// implementation 'org.springframework.boot:spring-boot-starter-data-redis'



	runtimeOnly 'org.postgresql:postgresql'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// Chess library for move validation and FEN manipulation
	implementation 'com.github.bhlangonijr:chesslib:1.3.4'

	// Development Tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Lombok (optional, for reducing boilerplate)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.assertj:assertj-core:3.25.1'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.80
			}
		}
	}
}

check.dependsOn jacocoTestCoverageVerification

bootBuildImage {
	imageName = 'checkmate-backend:latest'
	builder = 'paketobuildpacks/builder-jammy-base:latest'
	environment = [
		'BP_JVM_VERSION': '21'
	]
}

// Checkstyle configuration (Google Java Style Guide)
checkstyle {
	toolVersion = '10.21.1'
	configFile = file("config/checkstyle/google_checks.xml")
	ignoreFailures = true
	maxWarnings = 0
}

tasks.withType(Checkstyle) {
	reports {
		xml.required = false
		html.required = true
	}
}
